--- a/supports/lwip/lwip/Makefile
+++ b/supports/lwip/lwip/Makefile
@@ -85,6 +85,8 @@ EXTS_MISC_SRC += \
 	$(EXT_HOME)/misc/tftpServer.c \
 	$(EXT_HOME)/misc/extTelnetd.c \
 	$(EXT_HOME)/misc/extPing.c \
+	$(EXT_HOME)/mqtt/mqtt.c \
+	$(EXT_HOME)/mqtt/mqttClient.c \
 
 #	src/lwip/jsonUtils.c \
 
