--- a/supports/lwip/unix/port/Makefile
+++ b/supports/lwip/unix/port/Makefile
@@ -18,6 +18,8 @@ UNIX_PORT_SRC += \
 	perf.c \
 	simCmds.c \
 	netif/tapif.c \
+
+NOT_USED += \
 	netif/tunif.c \
 	netif/unixif.c \
 	netif/list.c \
