--- a/supports/lwip/lwip/Makefile
+++ b/supports/lwip/lwip/Makefile
@@ -141,6 +141,20 @@ EXTS_IPERF_SRC += \
 	$(EXT_HOME)/iperf/iperfUdp.c \
 	$(EXT_HOME)/iperf/iperfLwip.c \
 
+EXTS_PTPD_SRC += \
+	$(EXT_HOME)/ptp/ptpArith.c \
+	$(EXT_HOME)/ptp/ptpBmc.c \
+	$(EXT_HOME)/ptp/ptpMain.c \
+	$(EXT_HOME)/ptp/ptpProtocol.c \
+	$(EXT_HOME)/ptp/ptpUtils.c \
+	$(EXT_HOME)/ptp/dep/ptpMsg.c \
+	$(EXT_HOME)/ptp/dep/ptpNet.c \
+	$(EXT_HOME)/ptp/dep/ptpServo.c \
+	$(EXT_HOME)/ptp/dep/ptpStartup.c \
+	$(EXT_HOME)/ptp/dep/ptpSysTime.c \
+	$(EXT_HOME)/ptp/dep/ptpTimer.c \
+
+
 EXTS_LWIP_SRC += \
 	$(EXTS_CMN_SRC) \
 	$(EXTS_MISC_SRC) \
@@ -149,6 +163,7 @@ EXTS_LWIP_SRC += \
 	$(EXTS_NMOS_SRC) \
 	$(EXTS_CMD_SRC) \
 	$(EXTS_IPERF_SRC) \
+	$(EXTS_PTPD_SRC) \
 	$(EXT_HOME)/extLwipStart.c \
 
 
