--- a/supports/lwip/lwip/Makefile
+++ b/supports/lwip/lwip/Makefile
@@ -163,6 +163,8 @@ EXTS_LWIP_SRC += \
 	$(EXTS_CMD_SRC) \
 	$(EXTS_IPERF_SRC) \
 	$(EXTS_PTPD_SRC) \
+	$(EXT_HOME)/extFsm.c \
+	$(EXT_HOME)/extMediaTask.c \
 	$(EXT_HOME)/extLwipStart.c \
 
 
