--- a/supports/lwip/lwip/src/Makefile
+++ b/supports/lwip/lwip/src/Makefile
@@ -171,6 +171,8 @@ EXTS_LWIP_SRC += \
 	$(EXTS_CMD_SRC) \
 	$(EXTS_IPERF_SRC) \
 	$(EXTS_PTPD_SRC) \
+	$(EXT_HOME)/extMediaTask.c \
+	$(EXT_HOME)/extLwipStart.c \
 	$(EXT_HOME)/extLwipStart.c \
 
 #	lwip/frozen.c \
