debug fsm and dhcp

--- a/an767/boot/src/Makefile
+++ b/an767/boot/src/Makefile
@@ -79,7 +79,9 @@ $(LOCAL_ALL):$(OBJS)
 #		$(CC) -nostartfiles -nostdlib -mthumb -Wl,-Map=$(EXE).map,--cref,--gc-sections -mthumb -mcpu=cortex-m7 -T flash.lds $(OBJS) -lgcc -Wl,-L$(BIN_DIR) -lbsp $(CMN_LIB) -o $(EXE).elf 
 		$(CC) --specs=nano.specs -specs=nosys.specs -mthumb -Wl,-Map=$(EXE).map,--cref,--gc-sections -mthumb -mcpu=cortex-m7 -T flash.lds $(OBJS) -Wl,-L$(BIN_DIR) -lbsp $(CMN_LIB) -o $(EXE).elf 
 		$(OBJCOPY) -O binary $(EXE).elf $@
+		$(COPY) $(EXE).elf $(BIN_DIR)/$(EXE).$(BUILDTIME).elf
 		$(MOVE) $(EXE).elf $(BIN_DIR)
+		$(COPY) $@ $(BIN_DIR)/$(EXE).$(BUILDTIME).bin
 		$(MOVE) $@ $(BIN_DIR)
 		$(MOVE) $(EXE).map $(BIN_DIR)
 
