add http debugging code

--- a/supports/lwip/lwip/Makefile
+++ b/supports/lwip/lwip/Makefile
@@ -104,6 +104,7 @@ EXTS_WEB_SRC += \
 	$(EXT_HOME)/http/httpSend.c \
 	$(EXT_HOME)/http/httpWebSocket.c \
 	$(EXT_HOME)/http/httpWebPages.c \
+	$(EXT_HOME)/http/httpFsm.c \
 	$(EXT_HOME)/http/httpMain.c \
 
 
