--- a/supports/lwip/lwip/src/Makefile
+++ b/supports/lwip/lwip/src/Makefile
@@ -112,6 +112,9 @@ EXTS_WEB_SRC += \
 	$(EXT_HOME)/http/httpSend.c \
 	$(EXT_HOME)/http/httpWebSocket.c \
 	$(EXT_HOME)/http/httpWebPages.c \
+	$(EXT_HOME)/http/httpFsm.c \
+	$(EXT_HOME)/http/httpSdpApi.c \
+	$(EXT_HOME)/http/httpParseData.c \
 	$(EXT_HOME)/http/httpMain.c \
 
 
@@ -175,6 +178,7 @@ EXTS_LWIP_SRC += \
 	$(EXT_HOME)/extMediaTask.c \
 	$(EXT_HOME)/extLwipStart.c \
 	$(EXT_HOME)/extSys.c \
+	$(EXT_HOME)/extSysCtrl.c \
 
 #	lwip/frozen.c \
 
