--- a/supports/lwip/lwip/src/Makefile
+++ b/supports/lwip/lwip/src/Makefile
@@ -176,12 +176,13 @@ EXTS_LWIP_SRC += \
 	$(EXTS_NMOS_SRC) \
 	$(EXTS_CMD_SRC) \
 	$(EXTS_IPERF_SRC) \
-	$(EXTS_PTPD_SRC) \
 	$(EXT_HOME)/extFsm.c \
 	$(EXT_HOME)/extMediaTask.c \
 	$(EXT_HOME)/extLwipStart.c \
 	$(EXT_HOME)/extSys.c \
 	$(EXT_HOME)/extSysCtrl.c \
+
+#	$(EXTS_PTPD_SRC) \
 
 #	lwip/frozen.c \
 
